# ChangeLog for app-i18n/fcitx-qt5
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/fcitx-qt5/ChangeLog,v 1.3 2015/04/11 16:33:28 kensington Exp $

  11 Apr 2015; Michael Palimaka <kensington@gentoo.org> fcitx-qt5-1.0.0.ebuild:
  extra-cmake-modules moved from dev-libs to kde-frameworks.

*fcitx-qt5-1.0.0 (03 Feb 2015)

  03 Feb 2015; Ben de Groot <yngwin@gentoo.org> +fcitx-qt5-1.0.0.ebuild:
  version bump; update dependencies

*fcitx-qt5-0.1.2 (02 Nov 2014)

  02 Nov 2014; Ben de Groot <yngwin@gentoo.org> +fcitx-qt5-0.1.2.ebuild,
  +metadata.xml:
  Initial commit of Fcitx Qt5 input module