@@ -1,6 +1,12 @@
 # ChangeLog for app-i18n/fcitx-qt5
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/fcitx-qt5/ChangeLog,v 1.3 2015/04/11 16:33:28 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/fcitx-qt5/ChangeLog,v 1.4 2015/05/09 12:01:09 yngwin Exp $
+
+*fcitx-qt5-1.0.2 (09 May 2015)
+
+  09 May 2015; Ben de Groot <yngwin@gentoo.org> +fcitx-qt5-1.0.2.ebuild,
+  -fcitx-qt5-0.1.2.ebuild, -fcitx-qt5-1.0.0.ebuild:
+  version bump; remove old
 
   11 Apr 2015; Michael Palimaka <kensington@gentoo.org> fcitx-qt5-1.0.0.ebuild:
   extra-cmake-modules moved from dev-libs to kde-frameworks.
